--- a/src/layouts/main.css
+++ b/src/layouts/main.css
@@ -12,7 +12,7 @@
   letter-spacing: 2px;
 }
 .p-btn-dark {
-  background-color: darkgray;
+  background-color: black;
   color: white;
 }
 .p-btn2-light {
@@ -20,19 +20,32 @@
   color: darkgray;
 }
 /* GENERAL END */
-/* NAVBAR */
-.nav {
+
+/* LANDING */
+.landing-splash {
+  margin: auto;
+  background-color: rgb(229, 217, 207);
+  padding: 10%;
+  text-align: center;
+}
+.splash-heading {
   text-transform: uppercase;
+  letter-spacing: 3px;
 }
-.nav .nav-heading {
-  font-size: 1.5em;
-  letter-spacing: 5px;
+.landing-content {
+  background-color: rgb(207,219,210);
 }
-.nav .nav-anchor a{
-  color: gray;
-  font-size: 1.1em;
+.landing-content img {
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
-/* NAVBAR END*/
+.landing-content-info {
+  margin: auto;
+  text-align: center;
+  padding: 30% 0 30% 0;
+}
+/* LANDING END */
 
 /* PROJECT CARD */
 .p-card1 {
