--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,20 @@
+/* FONTS */
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+@font-face {
+  font-family: 'Roboto', monospace;
+  src: url('https://fonts.googleapis.com/css?family=Roboto')
+}
+
+@font-face {
+   font-family: 'AGaramondPro-Regular';
+   src: url('./layouts/fonts/AGaramondPro-Regular.otf');
+}
+
+@font-face {
+   font-family: 'Boysen Regular';
+   src: url('./layouts/fonts/Boysen Regular.otf');
+}
+
 /* PAGE */
 
 body,
