--- a/src/layouts/main.css
+++ b/src/layouts/main.css
@@ -3,7 +3,7 @@
   text-transform: uppercase;
   font-weight: 500;
   border: none;
-  padding: 20px;
+  padding: 15px;
   text-align: center;
   font-size: 14px;
   margin: 30px 20px 0 0;
@@ -12,12 +12,12 @@
   letter-spacing: 3px;
 }
 .p-btn-dark {
-  background-color: black;
+  background-color: rgba(62, 62, 60);
   color: white;
 }
 .p-btn2-light {
   background-color: white;
-  color: darkgray;
+  color: rgba(62, 62, 60);;
 }
 .p-btn-clear {
   text-transform: uppercase;
@@ -76,7 +76,7 @@
   text-transform: uppercase;
 }
 .dashboard-text {
-  color: rgb(209, 211, 209)
+  color: rgb(209, 211, 209);
 }
 .dashboard-main-info-l {
   max-width: 500px;
@@ -96,6 +96,9 @@
 .lux-fee {
   color: gold;
 }
+.p-tot-amt {
+  color: white;
+}
 .d-tot-amt {
   color: white;
   font-weight: bold;
@@ -103,6 +106,12 @@
 /* DASHBOARD END */
 
 /* PROJECT CARD */
+.p-card1, .p-card2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 50px
+}
 .p-card1 {
   background-color: rgb(207,219,210);
   height: 680px;
@@ -119,28 +128,23 @@
   background-size: 50% 100%;
   background-position: left top;
 }
-.p-card-box1 {
-  position: relative;
-  left: 15%;
-  top: 50px;
-  width: 45%;
-}
-.p-card-box2 {
-  position: relative;
-  left: 45%;
-  top: 50px;
-  width: 45%;
-}
+
 .card-content {
   background-color: white;
   padding: 50px;
 }
 .card-title, .card-sub-title {
   text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 2px;
+  font-size: 13px;
 }
 .card-title {
   font-weight: 400;
   font-size: 30px;
+  color: #585A56;
+  letter-spacing: 3px;
+  margin: 5px 0 5px 0;
 }
 .card-sub-title {
   color: green;
@@ -149,15 +153,26 @@
 .card-text {
   line-height: 2;
   font-size: 15px;
-  padding-bottom: 50px;
+  padding-bottom: 40px;
+  margin: 0;
+  color: #585A56;
 }
 .pledge {
-  margin-top: 25px;
-  font-size: 30px;
-  font-weight: 600;
+  margin: 25px 0 0 0;
+  font-size: 25px;
+  font-weight: bold;
 }
 .pledge-sub {
-  font-size: 20px;
-  color: gray;
+  font-size: 17px;
+  color: rgb(209, 211, 209);
+  margin-top: 0;
+}
+.progress-bar {
+  background-color: rgb(209, 211, 209);
+  margin-right: -50px;
+}
+.progress-bar-meter {
+  background-color: green;
+  height: 5px;
 }
 /* PROJECT CARD END */
