--- a/src/layouts/main.css
+++ b/src/layouts/main.css
@@ -110,28 +110,21 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-top: 50px
+  margin-top: 30px
 }
 .p-card1 {
   background-color: rgb(207,219,210);
-  height: 680px;
-  background-image: url('./img/foo.jpg');
-  background-repeat: no-repeat;
-  background-size: 50% 100%;
-  background-position: right top;
+  padding: 20;
 }
 .p-card2 {
   background-color: rgb(229,217,207);
-  height: 680px;
-  background-image: url('./img/foo.jpg');
-  background-repeat: no-repeat;
-  background-size: 50% 100%;
-  background-position: left top;
+  padding: 20;
 }
 
 .card-content {
   background-color: white;
-  padding: 50px;
+  padding: 15px;
+  margin-top: 30px;
 }
 .card-title, .card-sub-title {
   text-transform: uppercase;
@@ -151,7 +144,7 @@
   margin: 0;
 }
 .card-text {
-  line-height: 2;
+  line-height: 1.7;
   font-size: 15px;
   padding-bottom: 40px;
   margin: 0;
