--- a/src/layouts/main.css
+++ b/src/layouts/main.css
@@ -115,10 +115,12 @@
 .p-card1 {
   background-color: rgb(207,219,210);
   padding: 20;
+  max-height: 550px;
 }
 .p-card2 {
   background-color: rgb(229,217,207);
   padding: 20;
+  max-height: 550px;
 }
 
 .card-content {
