--- a/src/layouts/main.css
+++ b/src/layouts/main.css
@@ -11,11 +11,22 @@
   height: 65px;
   letter-spacing: 3px;
 }
-.p-btn-dark {
+.p-btn-dark-small, .p-btn-light-small {
+  text-transform: uppercase;
+  font-weight: 500;
+  border: none;
+  padding: 10px;
+  text-align: center;
+  font-size: 12px;
+  width: '40%';
+  height: 45px;
+  letter-spacing: 3px;
+}
+.p-btn-dark, .p-btn-dark-small  {
   background-color: rgb(88, 90, 86);
   color: white;
 }
-.p-btn2-light {
+.p-btn2-light, .p-btn2-light {
   background-color: white;
   color: rgba(62, 62, 60);;
 }
@@ -127,7 +138,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-top: 30px
+  margin-top: 30px;
+  padding-bottom: 20px;
 }
 .p-card1 {
   background-color: rgb(207,219,210);
@@ -139,7 +151,6 @@
   padding: 20;
   max-height: 550px;
 }
-
 .card-content {
   background-color: white;
   padding: 15px;
@@ -150,6 +161,12 @@
   font-weight: bold;
   letter-spacing: 2px;
   font-size: 13px;
+}
+.card-sub-title3 {
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 2px;
+  font-size: 10px;
 }
 .card-title {
   font-weight: 400;
@@ -188,12 +205,17 @@
   margin-right: -50px;
   width: 102.5%
 }
+.progress-bar-small {
+  background-color: rgb(209, 211, 209);
+  margin-right: -50px;
+  width: 95%
+}
 .project-progress-bar {
   background-color: rgb(209, 211, 209);
 }
 .progress-bar-meter {
-  background-color: green;
-  height: 5px;
+  background-color: #00A70B;
+  height: 3px;
 }
 /* PROJECT CARD END */
 
@@ -241,3 +263,9 @@
   margin: 0;
 }
 /* PROJECT LISt CARD END */
+
+/* SIMPLE PROJECT CARD STYLING START */
+.boxed-image {
+  object-fit: cover;
+}
+/* PROJECT CARD IMAGE STYLING END */
