added much of the dynamic build and integration into the front end views

--- a/src/layouts/main.css
+++ b/src/layouts/main.css
@@ -316,7 +316,7 @@
 /* PROJECT CARD IMAGE STYLING END */
 
 /* INPUT BOX */
-form.inputbox {
+div.inputbox {
   height: 50px;
   margin: 20px 0 20px 0;
   position: relative;
@@ -328,7 +328,7 @@ input[type="text"] {
     border-color: rgb(88, 90, 86);
     border-width: thin;
 }
-form.inputbox button {
+div.inputbox button {
     position: absolute;
     margin-left: -50px;
     height: 51px;
