--- a/src/layouts/main.css
+++ b/src/layouts/main.css
@@ -178,6 +178,11 @@
 }
 .card-content {
   background-color: white;
+  padding: 15px;
+  margin-top: 30px;
+}
+.card-content-slim {
+  background-color: white;
   padding: 15px 0;
   margin-top: 30px;
 }
@@ -216,6 +221,13 @@
 .card-title {
   font-weight: 400;
   font-size: 25px;
+  color: #585A56;
+  letter-spacing: 3px;
+  margin: 5px 0 5px 0;
+}
+.card-title-slim {
+  font-weight: 400;
+  font-size: 27px;
   color: #585A56;
   letter-spacing: 3px;
   margin: 5px 0 5px 0;
@@ -347,7 +359,6 @@ div.inputbox button {
 /* SUPPORT SECTION */
 .support-sec {
   background-color: white;
-  padding: 100px 100px 0 100px;
   margin-bottom: 150px;
 }
 .s-heading {
