minor mobile styling

--- a/src/layouts/main.css
+++ b/src/layouts/main.css
@@ -336,6 +336,7 @@ div.inputbox {
   height: 50px;
   margin: 20px 0 20px 0;
   position: relative;
+  white-space: nowrap;
 }
 input[type="text"] {
     width: 200px;
