--- a/src/layouts/main.css
+++ b/src/layouts/main.css
@@ -264,7 +264,7 @@
 }
 .support-progress-bar {
   margin-top: 25px;
-  background-color: rgb(209, 211, 209);
+  /* background-color: rgb(209, 211, 209); */
 }
 .progress-bar-small {
   background-color: rgb(209, 211, 209);
