--- a/src/layouts/main.css
+++ b/src/layouts/main.css
@@ -368,3 +368,35 @@ div.inputbox button {
   justify-content: center;
 }
 /* PROGRESS END */
+
+/* Tooltip container */
+.tooltip {
+    position: relative;
+    display: inline-block;
+    background-color: rgb(120,120,120);
+    border-radius: 50%;
+    padding: 0 10px 0 12px;
+    color: white;
+}
+
+/* Tooltip text */
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+    display: inline;
+
+    position: absolute;
+    z-index: 1;
+    top: -10px;
+    right: 125%;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+}
