--- a/src/layouts/main.css
+++ b/src/layouts/main.css
@@ -114,7 +114,7 @@
 .dashboard-main {
   background-color: #585A56;
   width: auto;
-  margin: 50px;
+  margin: 3%;
   color: white;
   padding: 25px;
 }
