--- a/src/layouts/main.css
+++ b/src/layouts/main.css
@@ -388,13 +388,14 @@ div.inputbox button {
 /* Tooltip text */
 .tooltip .tooltiptext {
     visibility: hidden;
-    width: 120px;
+    width: 400px;
     background-color: black;
     color: #fff;
     text-align: center;
     padding: 5px 0;
     border-radius: 6px;
     display: inline;
+    font-size: 11px;
 
     position: absolute;
     z-index: 1;
