temp mobile nav

--- a/src/layouts/main.css
+++ b/src/layouts/main.css
@@ -415,3 +415,8 @@ div.inputbox button {
 .tooltip:hover .tooltiptext {
     visibility: visible;
 }
+
+/* NAV */
+.top-nav a {
+  line-height: 2;
+}
