--- a/src/layouts/main.css
+++ b/src/layouts/main.css
@@ -181,6 +181,19 @@
   padding: 20;
   /* max-height: 550px; */
 }
+
+@media (max-width: 599px) {
+  .p-card1, .p-card2 {
+    background-image: none !important;
+  }
+  .support-btns {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    float: none !important;
+  }
+}
+
 .card-content {
   background-color: white;
   padding: 15px;
