make ux changes dictated by sally on google document

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
 
 body,
 .pure-g [class*=pure-u] {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'AGaramondPro-Regular';
 }
 
 .header {
